# online_shop

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
actions/: create_superuser.py
migrations/: env.py
migrations/versions/: 001_add_product_model.py  002_add_users_table.py
src/: __init__.py  config.py  server.py  service.py  settings.py
src/actions/: create_superuser.py
src/admin/: __init__.py  filters.py  product_admin.py  user_admin.py
src/api/: __init__.py  auth_router.py  product_router.py  users_router.py
src/auth/: backend.py  fastapi_users_router.py  strategy.py  transport.py  user_manager.py
src/dependencies/auth/: __init__.py  user_manager.py  users.py
src/handlers/: product_handler.py
src/mailing/: __init__.py  send_email.py  send_email_confirmed.py  send_verification_email.py
src/models/: __init__.py  product.py  user.py
src/models/mixins/: timestamp.py
src/repositories/: base_repository.py  product_repository.py
src/schemas/: product.py
src/utils/: db.py  db_helper.py
