[project]
name = "online-shop"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "fastapi-users[sqlalchemy]==15.0.4",
    "fastapi[standard]==0.135.0",
    "pydantic-settings==2.13.1",
    "sqladmin[full]==0.23.0",
    "sqlalchemy[asyncio]==2.0.47",
]

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "ruff==0.15.4",
    "ty==0.0.19",
]
